tests/MathML/basic/bad/deprecated-mtd1.mml


<math xmlns="http://www.w3.org/1998/Math/MathML">
  <mtd></mtd> 
</math>